--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,24 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# --- extra ignores for wx-pyq-hd ---
+# IDE
+.vscode/
+
+# Build output
+dist/
+
+# Coverage
+coverage/
+
+# Playwright artifacts
+playwright-report/
+test-results/
+
+# Env and logs
+*.local
+*.log
+
+# macOS
+.DS_Store
